# simple-ci

./: LICENSE  Makefile  pyproject.toml  server.py
