[tool.poetry]
name = "simple-ci"
version = "0.1.0"
description = ""
authors = ["Nikita Y. <fmajesty@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
loguru = "^0.5.3"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
